--- a/_config.melody.yml
+++ b/_config.melody.yml
@@ -54,7 +54,7 @@ highlight_theme: default
 social:
   github-alt fa: https://github.com/AmamiyaReona
   twitter fa: https://twitter.com/Amamiya_Reona
-  rss fa: https://amamiyareona.github.io/atom.xml
+  rss fa: https://amamiyareona.netlify.app/atom.xml
 
 # Algolia search
 # ---------------
